--- a/src/scss/_selectLanguage.scss
+++ b/src/scss/_selectLanguage.scss
@@ -1,5 +1,5 @@
-<<<<<<<< HEAD:src/scss/header.scss
-@import "_mixins.scss";
+@use 'mixins' as *;
+@use "variables" as *;
 
 .logo {
   width: 70px;
@@ -13,9 +13,6 @@
   }
 
 }
-========
-@use "variables" as *;
->>>>>>>> main:src/scss/_selectLanguage.scss
 
 .dropdown {
     position: relative;
