--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -27,11 +27,11 @@ header {
         display: flex;
         flex-direction: column;
         position: absolute;
-        top: 90px;
+        top: 70px;
         padding: 20px 0;
         right: 0;
         width: 100%;
-        background: $secondaryColor;
+        background: $quaternaryHoverColor;
     }
 
     .navLink {
@@ -82,16 +82,28 @@ li {
 
 @include tablet {
 .navLink.active:after {
-    content: ""; 
-    position: absolute; 
-    bottom: -6px; 
-    left: 0;
-    transform: translateX(0%);
-    width: 100%; 
-    border-bottom: 2px solid $tertiaryColor; 
+    content: "";
+    position: absolute;
+    display: flex;
+    bottom: -9px; 
+    left: 50%;
+    transform: translateX(-50%);
+    width: calc(100%); 
+    padding: 5px 15px;
+    height: 30px; 
+    background-color: #ffffff; 
+    border-radius: 30px; 
+    border-bottom: 0px; 
+
+    @include desktop {
+    bottom: -8px; 
+    }
+  }
+
+  .navText {
+    z-index: 1;
   }
 }
-
 
 @include tablet {
     .mobile-navigation {
@@ -107,6 +119,16 @@ li {
         align-items: center;
         gap: 2vw;
         padding-right: 2vw;
+
+        @include tablet {
+            margin-left: -30px;
+            gap: 30px;
+        }
+
+        @include desktop {
+            margin-left: -50px;
+            gap: 40px;
+        }
     }
 }
 } 
