--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -132,7 +132,7 @@ footer {
         justify-content: center;
         background-color: $quinaryColor;
         padding: 20px;
-        color: $tertiaryColor;
+        color: $quaternaryColor;
 
         @include desktop {
           padding: 40px;
