--- a/src/scss/_aboutPage.scss
+++ b/src/scss/_aboutPage.scss
@@ -13,7 +13,7 @@
     .header-title {
         display: flex;
         justify-content: center;
-        padding: 30px 0 10px 0;
+        padding: 90px 0 10px 0;
     }
 
 
@@ -29,8 +29,8 @@
 
         .portrait-container {
             background-color: $secondaryColor;   
-            width: 600px;
-            height: 800px;
+            width: 550px;
+            height: 680px;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -54,6 +54,7 @@
 
             @include desktop {
                 margin-top: -10px;
+                margin-bottom: 20px;
                 width: 400px;
                 height: 400px;
             }
@@ -69,7 +70,7 @@
 
             .contact-text {
                 margin-left: 70px;
-                margin-top: 50px;
+                margin-top: 20px;
                 display: flex;
                 flex-direction: row;
                 align-items: center;
@@ -109,6 +110,20 @@
             margin-right: auto;
             text-align: center;
 
+            .about-me-hello {
+                color: $quaternaryColor;
+            }
+
+            .about-me-frontend {
+                color: $quaternaryColor;
+                margin-bottom: 30px;
+
+                .highlight {
+                    font-weight: 600;
+                    color: $tertiaryColor;
+                }
+            }
+
             @include desktop {
                 max-width: 40vw;
                 margin-left: 10px;
@@ -120,42 +135,143 @@
                 margin: 30px 0 20px;
                 font-weight: normal;
                 color: $tertiaryColor;
-                font-size: 1.7em;
-
                 @include desktop {
                     margin: 30px 0 30px;
-                    font-size: 2.5em;
                 }
             }
 
             .about-me-text {
-                color: $tertiaryColor;
+                color: $quaternaryColor;
                 margin-bottom: 20px;
 
                 @include desktop {
-                    margin-bottom: 30px;
+                    margin-bottom: 60px;
                 }
             }
 
             .download-link {
-                background-color: $tertiaryColor;
-                color: $primaryColor;
+                display: inline-flex; /* Use flexbox for centering text */
+                align-items: center;
+                justify-content: center;
                 font-size: 1em;
                 text-align: center;
                 text-decoration: none;
-                max-width: 50vw;
                 border-radius: 10px;
-                padding: 17px 60px;
-                margin: auto;
-
+                padding: 17px;
+                width: 200px;
+                height: 60px;
+                margin-top: -30px;
+                transition: background-color 0.3s ease, color 0.3s ease;
+              
                 @include desktop {
-                background-color: $tertiaryColor;
+                  font-size: 1.4em;
+                  width: 180px;
+                  height: 25px; 
+                }
+              
+                &:hover {
+                  opacity: 0.8; 
+                }
+              }
+
+            .cv-link {
+                background-color: $tertiaryColor; 
                 color: $primaryColor;
-                font-size: 1.4em;
-                max-width: 10vw;  
-                margin: 0;   
+                
+                &:hover {
+                  background-color: $tertiaryHoverColor;
+                }
+              }
+
+              .contact-link {
+                margin-left: 30px;
+                background-color: $secondaryColor;      
+                color: $tertiaryColor;
+                
+                &:hover {
+                  background-color: $primaryHoverColor;
                 }
             }
-        }
+
+
+            .scroll-down-arrow {
+                position: absolute;
+                bottom: -70px;
+                right: 250px;
+            }
+        }    
     }
 }
+
+.contact-form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px; 
+    margin: 60px;
+    padding: 40px;
+    background-color: $secondaryColor; 
+    border-radius: 10px;
+  
+    .form-group {
+  
+      &:nth-of-type(1),
+      &:nth-of-type(2) {
+        input,
+        textarea {
+          width: 400px;
+        }
+
+      }
+  
+      &:nth-of-type(3),
+      &:nth-of-type(4) {
+        input,
+        textarea {
+          width: 900px;
+        }
+      }
+  
+      input,
+      textarea {
+        background-color: $primaryColor; 
+        color: $tertiaryColor; 
+        border: 1px solid $secondaryColor;
+        border-radius: 5px;
+        padding: 30px;
+        font-size: 1em;
+
+        &::placeholder {
+            color: $tertiaryColor; 
+            font-size: 1.2em;
+          }
+  
+        &:focus {
+          border-color: $tertiaryColor;
+          outline: none;
+        }
+      }
+  
+      textarea {
+        resize: none;
+        min-height: 100px; 
+      }
+    }
+  
+    .send-button {
+      background-color: $tertiaryColor;
+      color: $primaryColor; 
+      border: none;
+      border-radius: 50px;
+      height: 70px;
+      padding: 15px 20px;
+      font-size: 1.2em;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+  
+      &:hover {
+        background-color: $tertiaryHoverColor;
+      }
+    }
+  }
+  
