--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,7 @@
 @use "navbar" as *;
 @use "section" as *;
 @use "selectLanguage" as *;
+@use "animations" as *;
 
 * {
     margin: 0;
@@ -53,3 +54,22 @@ h2 {
         font-size: 3.5em;
     } 
 }
+
+h3 {
+    font-size: 1.4em;
+    font-weight: normal;
+ 
+    @include tablet {
+        font-size: 1.6em;
+    }
+    
+    @include desktop {
+        font-size: 2em;
+    } 
+}
+
+h1, h2, h3, h4, h5, h6, p, span {
+    &.fade-in-target {
+      opacity: 0; 
+    }
+  }
