--- a/src/scss/_homePage.scss
+++ b/src/scss/_homePage.scss
@@ -54,7 +54,7 @@ article {
     align-items: center;
     flex-direction: column;
     padding: 30px;
-    height: 80vw;
+    height: 90vh;
     color: $tertiaryColor;
     
     @include desktop {
@@ -71,21 +71,46 @@ article {
         display: flex;
         padding: 20px;
         flex-direction: column;
+
         .expertise-1, .expertise-2, .expertise-3 {
             padding: 20px;
-            width: 370px;
-            height: 440px;
-            margin: 40px;
+            width: 500px;
+            height: 150px;
+            margin: 20px;
             background-color: $primaryColor;
             box-shadow: 0px 0px 10px $primaryBoxShadowColor;
             border-radius: 10px;
-            text-align: center;
+            display: flex;
+            align-items: center;
+
+            @include desktop {
+                display:block;
+                margin: 40px;
+                width: 370px;
+                height: 440px;
+                text-align: center;
+            }
 
             .expertise-icon {
-                margin: 40px;
-                width: 200px;
-                height: auto;
-                margin-bottom: 30px;
+                margin: 0px;
+                width: 130px;
+                height: 80px;
+    
+
+                @include desktop {
+                    margin: 40px;
+                    width: 200px;
+                    height: auto;
+                    margin-bottom: 30px;
+                }
+            }
+
+            .expertise-title {
+                margin-left: 20px;
+
+                @include desktop {
+                    margin-left: 0px;
+                }
             }
 
             .expertise-info {
