changed layout tablet

--- a/src/scss/_homePage.scss
+++ b/src/scss/_homePage.scss
@@ -40,13 +40,19 @@
     .header-title {
         font-weight: normal;
         color: $tertiaryColor;
-        margin-bottom: 25px;
+        margin-bottom: 15px;
+
+        @include tablet {
+            margin-bottom: 20px;
+        };
+
+        @include desktop {
+            margin-bottom: 25px;
+        };
     }
 
     .header-subtitle {
         font-weight: normal;
-        font-size:xx-large;
-
         color: $tertiaryColor;  
         padding-bottom: 8px;
 
@@ -60,8 +66,16 @@ article {
     padding: 30px;
     height: 90vh;
     color: $tertiaryColor;
-    
+
+    @include tablet {
+        height: 70vh;
+    }
+
     @include desktop {
+        height: 95vh;
+    }
+    
+    @include desktop-large {
         height: 70vh;
     }
     }
@@ -78,7 +92,7 @@ article {
 
         .expertise-1, .expertise-2, .expertise-3 {
             padding: 20px;
-            width: 500px;
+            width: 80vw;
             height: 150px;
             margin: 20px;
             background-color: $primaryColor;
@@ -87,20 +101,43 @@ article {
             display: flex;
             align-items: center;
 
+            @include tablet {
+                display:block;
+                margin: 20px;
+                width: 220px;
+                height: 300px;
+                text-align: center;
+            }
+
             @include desktop {
                 display:block;
                 margin: 40px;
+                width: 300px;
+                height: 370px;
+              
+            }
+
+            @include desktop-large {
+              
+                margin: 40px;
                 width: 370px;
                 height: 440px;
-                text-align: center;
+            
             }
 
             .expertise-icon {
                 margin: 0px;
-                width: 130px;
-                height: 80px;
+                width: 100px;
+                height: 70px;
     
 
+                @include tablet {
+                    margin: 20px;
+                    height: auto;
+                    margin-bottom: 20px;
+                }
+
+                
                 @include desktop {
                     margin: 40px;
                     width: 200px;
@@ -112,7 +149,7 @@ article {
             .expertise-title {
                 margin-left: 20px;
 
-                @include desktop {
+                @include tablet {
                     margin-left: 0px;
                 }
             }
@@ -124,7 +161,7 @@ article {
             }
         }
         
-        @include desktop {
+        @include tablet {
             flex-direction: row;
         }
     
