--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -35,7 +35,7 @@
     background-color: transparent;
     padding: 6px 0px; 
     border-radius: 5px;
-    font-size: 1.3em; 
+    // font-size: 1.3em; 
     color: inherit; 
     cursor: pointer;
     outline: none;
