--- a/src/scss/_homePage.scss
+++ b/src/scss/_homePage.scss
@@ -64,21 +64,9 @@ article {
     align-items: center;
     flex-direction: column;
     padding: 30px;
-    height: 90vh;
     color: $tertiaryColor;
     max-width: 100vw;
-
-    @include tablet {
-        height: 70vh;
-    }
-
-    @include desktop {
-        height: 95vh;
-    }
-    
-    @include desktop-large {
-        height: 70vh;
-    }
+    min-height: 40vh;
     }
 
     .heading {
